# flask_blog

./: .Dockerignore  .gitignore  Dockerfile  README.md  app.db  app.py  babel.cfg  boot.sh  cli.py  config.py  db.py  docker-compose.debug.yml  docker-compose.yml  elastic.Dockerfile  email_utils.py  errors.py  flask_blog.py  forms.py  heroku.yml  models.py  pyproject.toml  requirements.txt  setup.cfg  test_user_model.py  translate.py  worker.Dockerfile  worker.py
app/: __init__.py  cli.py  email_utils.py  models.py  search.py  tasks.py  translate.py
app/api/: auth.py  users.py
app/auth/: email_auth_utils.py  forms.py  routes.py
app/errors/: handlers.py
app/main/: forms.py  routes.py
app/static/: popup.js  src.js
app/templates/: _post.pug  base.pug  edit_profile.pug  index.pug  messages.pug  search.pug  send_message.pug  user.pug  user_popup.pug
app/templates/auth/: login.pug  register.pug  reset_password.pug
app/templates/email/: export_posts.pug  reset_password.pug
app/templates/errors/: 404.pug  500.pug
app/translations/es/LC_MESSAGES/: messages.po
migrations/: alembic.ini
migrations/versions/: 20201006_21_updated_table_user_users.py  20201006_21_users_table.py  20201006_22_posts_table.py  20201009_09_user_add_about_me_last_seen.py  20201010_12_followers.py  20201013_10_add_language_to_posts.py  20201020_16_private_messages.py  20201021_16_notifications.py  20201022_13_tasks.py  20201026_13_user_tokens.py
templates/: 404.pug  500.pug  _post.pug  base.pug  edit_profile.pug  index.pug  login.pug  register.pug  reset_password.pug  reset_password_request.pug  user.pug
templates/email/: reset_password.pug
translations/es/LC_MESSAGES/: messages.po
