[tool.poetry]
name = "flask_redis"
version = "0.1.0"
description = ""
authors = ["Cole Rutledge <ColeRutledge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
pypugjs = "^5.9.4"
Flask-WTF = "^0.14.3"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-Login = "^0.5.0"
email-validator = "^1.1.1"
Flask-Mail = "^0.9.1"
PyJWT = "^1.7.1"
Flask-Bootstrap = "^3.3.7"
Flask-Moment = "^0.10.0"
Flask-Babel = "^2.0.0"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
elasticsearch = "^7.9.1"
psycopg2-binary = "^2.8.6"
rq = "^1.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
flask-shell-ipython = "^0.4.1"
ipykernel = "^5.3.4"
httpie = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
